# euktree-simulation

./: CPP.ipynb  LongGhosts.ipynb  gather_data.py  gather_ghosts.py  launcher_for_cpp.py  param_launcher.json  params_genome_struct.json  params_lengths.json  params_pop.json  params_recomb.json  recomb_model.py  recomb_model_v2.py  recomb_multichrsm.py  simulations.py  simulations_multichrsm.py
cpp/: CMakeLists.txt  README  main.cpp  main_afterfastghost.cpp  main_beforefastghost.cpp  rando_mp.hpp  rando_xo.hpp  xoshiro256ss.h
cpp/backups/: main_befchrsep.txt  main_bu_lineage.cpp  main_bu_nolineage.cpp
cpp/backups/rngtest/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  randtest  test_binom.cpp  test_binom.py
cpp/python_tests/: recomb_multichrsm.py  recomb_multichrsm.pyx
params/: params_genome_struct.json  params_lengths.json  params_pop.json  params_recomb.json  params_test.json
